--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html>
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="kube.min.css">
-    <link rel="stylesheet" href="hint.min.css">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/kube.min.css">
+    <link rel="stylesheet" href="css/hint.min.css">
+    <link rel="stylesheet" href="css/style.css">
     <title>Brackets Extension Statistics</title>
 </head>
 <body>
@@ -60,8 +60,8 @@
     </script>
 
 
-    <script src="jquery.min.js"></script>
-    <script src="mustache.js"></script>
-    <script src="script.js"></script>
+    <script src="js/jquery.min.js"></script>
+    <script src="js/mustache.js"></script>
+    <script src="js/script.js"></script>
 </body>
 </html>
