animated loading spinner

--- a/index.html
+++ b/index.html
@@ -5,20 +5,28 @@
     <link rel="stylesheet" href="css/kube.min.css">
     <link rel="stylesheet" href="css/hint.min.css">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/loader.css">
     <title>Brackets Extension Statistics</title>
 </head>
 <body>
 
+<!--
+    <header class="header">
+        <div class="content">
+            <input type="text" placeholder="Filter for a specific extension" class="width-100">
+        </div>
+    </header>
+-->
+    
     <div id="content" class="content">
-        <div class="loader"></div>
+        <div class="spinner">
+            <div class="bounce1"></div>
+            <div class="bounce2"></div>
+            <div class="bounce3"></div>
+        </div>
     </div>
 
-
-
-
-
-
-
+   
     <script id="template" type="x-tmpl-mustache">
         {{#.}}
             <div class="units-row item">
