added more default values

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                         <tfoot>
                             <tr>
                                 <td><strong>total</strong></td>
-                                <td><strong>{{totalDownloads}}</strong></td>
+                                <td><strong>{{totalDownloads}}{{^totalDownloads}}0{{/totalDownloads}}</strong></td>
                             </tr>
                         </tfoot>
                     </table>
