added short tables
click on table body for all rows

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                                 <th>downloads</th>
                             </tr>
                         </thead>
-                        <tbody>
+                        <tbody class="shortTable">
                             {{#versions}}
                                 <tr>
                                     <td><i class="hint--top" data-hint="published {{published}}">{{version}}</i></td>
